RESOLVED FIXED31491
DOMHTMLOptionElement is missing some implementation
https://bugs.webkit.org/show_bug.cgi?id=31491
Summary DOMHTMLOptionElement is missing some implementation
Jon Honeycutt
Reported 2009-11-13 14:04:44 PST
DOMHTMLOptionElement::text() and DOMHTMLOptionElement::label() are stubs.
Attachments
patch (2.84 KB, patch)
2009-11-13 14:16 PST, Jon Honeycutt
mitz: review+
jhoneycutt: commit-queue-
Jon Honeycutt
Comment 1 2009-11-13 14:16:37 PST
mitz
Comment 2 2009-11-13 15:06:26 PST
Comment on attachment 43201 [details] patch > + ASSERT(m_element && m_element->hasTagName(optionTag)); Please split into two assertions. > + ASSERT(m_element && m_element->hasTagName(optionTag)); Ditto.
Jon Honeycutt
Comment 3 2009-11-17 15:40:32 PST
I made Dan's change. Landed in r51093.
Note You need to log in before you can comment on or make changes to this bug.