DOMHTMLOptionElement is missing some functionality.

https://bugs.webkit.org/show_bug.cgi?id=31491

Reviewed by Dan Bernstein.

* DOMHTMLClasses.cpp:
(DOMHTMLOptionElement::text):
Cast m_element to an HTMLOptionElement, and call its text() function.
(DOMHTMLOptionElement::label):
Ditto, for label().

Canonical link: https://commits.webkit.org/42522@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51093 268f45cc-cd09-0410-ab3c-d52691b4dbfc